Fix TypeScript build error: exclude vite.config.ts from compilation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src", "*.tsx", "*.ts", "!server"],
+  "exclude": ["vite.config.ts", "node_modules", "dist", "server"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
 
