--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,16 @@ dist-ssr
 .env.local
 .env.*.local
 
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+*.egg-info/
+dist/
+build/
+.pytest_cache/
+.coverage
+htmlcov/
+
