Fix local RAG wiring and resiliency.
Add RAG_SERVICE_URL to env template, only attempt RAG when configured, and increase the RAG request timeout to reduce cold-start failures.

--- a/env.example
+++ b/env.example
@@ -7,6 +7,10 @@ OPENAI_API_KEY=sk-...
 # Note: Vite requires VITE_ prefix for frontend environment variables
 VITE_MAPBOX_ACCESS_TOKEN=pk.ey...
 
+# RAG microservice (optional but recommended for local-regulation sources)
+# Run the Python service in ./rag_service on port 8001
+RAG_SERVICE_URL=http://localhost:8001
+
 # Server Port (optional, defaults to 3001)
 PORT=3001
 
